# candle-token-classification

./: Cargo.toml  README.md
examples/bert/: Cargo.toml
examples/bert/src/: main.rs
src/: lib.rs  models.rs  traits.rs
src/models/: bert.rs
