[package]
name = "bert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
metal = ["candle-token-classification/metal"]
accelerate = ["candle-core/accelerate", "accelerate-src"]

[dependencies]

serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-token-classification = { path = "../.." }
candle-transformers.workspace = true

anyhow = "1.0"
clap = { version = "4.5.38", features = ["derive"] }
hf-hub = "0.4.2"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
accelerate-src = { version = "0.3.2", optional = true }
